--- a/web.config
+++ b/web.config
@@ -8,15 +8,16 @@
 
 <configuration>
      <system.webServer>
+			 		<webSocket enabled="false" />
           <handlers>
-               <!-- Indicates that the app.js file is a node.js site to be handled by the iisnode module -->
-               <add name="iisnode" path="app.js" verb="*" modules="iisnode"/>
+               <!-- Indicates that the index.js file is a node.js site to be handled by the iisnode module -->
+               <add name="iisnode" path="index.js" verb="*" modules="iisnode"/>
           </handlers>
           <rewrite>
                <rules>
                     <!-- Do not interfere with requests for node-inspector debugging -->
                     <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">                    
-                        <match url="^app.js/debug[/]?" />
+                        <match url="^index.js/debug[/]?" />
                     </rule>
 
                     <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
@@ -29,7 +30,7 @@
                          <conditions>
                               <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
                          </conditions>
-                         <action type="Rewrite" url="app.js"/>
+                         <action type="Rewrite" url="index.js"/>
                     </rule>
                </rules>
           </rewrite>
