allow to configure users

--- a/web.config
+++ b/web.config
@@ -35,6 +35,6 @@
                </rules>
           </rewrite>
           <!-- Configuration options for node.js -->
-          <iisnode watchedFiles="web.config;*.js;config.json"/>
+          <iisnode watchedFiles="web.config;*.js"/>
      </system.webServer>
 </configuration>
