--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "3.4.8",
