--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "vscode-standup-app",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "jade": "1.1.5",
-		"socket.io": "0.9.16"
+    "express": "4.17.1",
+    "socket.io": "4.4.0"
   }
 }
